other/check-hpa-exists/.chainsaw-test/deployment-without-hpa-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-without-hpa
  labels:
    app: app-without-hpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-without-hpa
  template:
    metadata:
      labels:
        app: app-without-hpa
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "12Mi"
          limits:
            cpu: "25m"
            memory: "25Mi"
