other/check-hpa-exists/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-hpa-exists
status:
  ready: true
