other/check-hpa-exists/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-hpa-exists
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-hpa-exists.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: check-hpa-exists
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: hpa.yaml
    - apply:
        file: deployment-with-hpa-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deployment-without-hpa-bad.yaml
